fix: homepage spacing

--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -24,12 +24,12 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 4rem 0;
+    // padding: 2rem 0;
 
     @include media("<=phone") {
       padding: 0 2rem;
       height: auto;
-      margin: 4rem 0;
+      margin: 2rem 0;
 
       &:first-child {
         margin-top: 0;
